ExtLibs/libgist/src/cmdline/cmdline_gram.output
Terminals unused in grammar

   ERROR
   ONLY
   EVALSPLIT
   EVALPENALTY


Grammar

    0 $accept: commands $end

    1 commands: /* empty */
    2         | commands command

    3 command: CREATE ID ID NL
    4        | CREATE ID ID ID FLOATCONST NL
    5        | WRITE LOADFILE ID ID NL
    6        | OPEN ID NL
    7        | CLOSE ID NL
    8        | CHECK ID NL
    9        | SELECT ID opt_k opt_ioparam STRCONST NL
   10        | INSERT ID STRCONST STRCONST NL
   11        | DELETE ID STRCONST NL
   12        | QUIT NL
   13        | DUMP ID dump_page NL
   14        | SPLIT ID INTCONST NL
   15        | SET ECHO_TOKEN INTCONST NL
   16        | SET STRUCT ID INTCONST NL
   17        | CREATEANL ID ID ID INTCONST FLOATCONST NL
   18        | OPENANL ID NL
   19        | CLOSEANL ID NL
   20        | SPLITSTATS ID opt_id NL
   21        | WKLDSTATS ID NL
   22        | PENALTYSTATS ID ID opt_id NL
   23        | ANLINFO ID NL
   24        | PREDINFO ID INTCONST INTCONST NL
   25        | HELP NL
   26        | error NL
   27        | NL

   28 dump_page: /* empty */
   29          | INTCONST

   30 opt_id: /* empty */
   31       | ID

   32 opt_k: /* empty */
   33      | INTCONST

   34 opt_ioparam: /* empty */
   35            | IOPARAM


Terminals, with rules where they appear

$end (0) 0
error (256) 26
ID (258) 3 4 5 6 7 8 9 10 11 13 14 16 17 18 19 20 21 22 23 24 31
STRCONST (259) 9 10 11
INTCONST (260) 14 15 16 17 24 29 33
IOPARAM (261) 35
FLOATCONST (262) 4 17
CREATE (263) 3 4
INSERT (264) 10
OPEN (265) 6
CLOSE (266) 7
QUIT (267) 12
SELECT (268) 9
DELETE (269) 11
NL (270) 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
    25 26 27
ERROR (271)
CHECK (272) 8
SPLIT (273) 14
HELP (274) 25
DUMP (275) 13
ONLY (276)
SET (277) 15 16
STRUCT (278) 16
WRITE (279) 5
ECHO_TOKEN (280) 15
EVALSPLIT (281)
EVALPENALTY (282)
LOADFILE (283) 5
PREDINFO (284) 24
CREATEANL (285) 17
OPENANL (286) 18
CLOSEANL (287) 19
WKLDSTATS (288) 21
SPLITSTATS (289) 20
PENALTYSTATS (290) 22
ANLINFO (291) 23


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
commands (38)
    on left: 1 2, on right: 0 2
command (39)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27, on right: 2
dump_page (40)
    on left: 28 29, on right: 13
opt_id (41)
    on left: 30 31, on right: 20 22
opt_k (42)
    on left: 32 33, on right: 9
opt_ioparam (43)
    on left: 34 35, on right: 9


state 0

    0 $accept: . commands $end

    $default  reduce using rule 1 (commands)

    commands  go to state 1


state 1

    0 $accept: commands . $end
    2 commands: commands . command

    $end          shift, and go to state 2
    error         shift, and go to state 3
    CREATE        shift, and go to state 4
    INSERT        shift, and go to state 5
    OPEN          shift, and go to state 6
    CLOSE         shift, and go to state 7
    QUIT          shift, and go to state 8
    SELECT        shift, and go to state 9
    DELETE        shift, and go to state 10
    NL            shift, and go to state 11
    CHECK         shift, and go to state 12
    SPLIT         shift, and go to state 13
    HELP          shift, and go to state 14
    DUMP          shift, and go to state 15
    SET           shift, and go to state 16
    WRITE         shift, and go to state 17
    PREDINFO      shift, and go to state 18
    CREATEANL     shift, and go to state 19
    OPENANL       shift, and go to state 20
    CLOSEANL      shift, and go to state 21
    WKLDSTATS     shift, and go to state 22
    SPLITSTATS    shift, and go to state 23
    PENALTYSTATS  shift, and go to state 24
    ANLINFO       shift, and go to state 25

    command  go to state 26


state 2

    0 $accept: commands $end .

    $default  accept


state 3

   26 command: error . NL

    NL  shift, and go to state 27


state 4

    3 command: CREATE . ID ID NL
    4        | CREATE . ID ID ID FLOATCONST NL

    ID  shift, and go to state 28


state 5

   10 command: INSERT . ID STRCONST STRCONST NL

    ID  shift, and go to state 29


state 6

    6 command: OPEN . ID NL

    ID  shift, and go to state 30


state 7

    7 command: CLOSE . ID NL

    ID  shift, and go to state 31


state 8

   12 command: QUIT . NL

    NL  shift, and go to state 32


state 9

    9 command: SELECT . ID opt_k opt_ioparam STRCONST NL

    ID  shift, and go to state 33


state 10

   11 command: DELETE . ID STRCONST NL

    ID  shift, and go to state 34


state 11

   27 command: NL .

    $default  reduce using rule 27 (command)


state 12

    8 command: CHECK . ID NL

    ID  shift, and go to state 35


state 13

   14 command: SPLIT . ID INTCONST NL

    ID  shift, and go to state 36


state 14

   25 command: HELP . NL

    NL  shift, and go to state 37


state 15

   13 command: DUMP . ID dump_page NL

    ID  shift, and go to state 38


state 16

   15 command: SET . ECHO_TOKEN INTCONST NL
   16        | SET . STRUCT ID INTCONST NL

    STRUCT      shift, and go to state 39
    ECHO_TOKEN  shift, and go to state 40


state 17

    5 command: WRITE . LOADFILE ID ID NL

    LOADFILE  shift, and go to state 41


state 18

   24 command: PREDINFO . ID INTCONST INTCONST NL

    ID  shift, and go to state 42


state 19

   17 command: CREATEANL . ID ID ID INTCONST FLOATCONST NL

    ID  shift, and go to state 43


state 20

   18 command: OPENANL . ID NL

    ID  shift, and go to state 44


state 21

   19 command: CLOSEANL . ID NL

    ID  shift, and go to state 45


state 22

   21 command: WKLDSTATS . ID NL

    ID  shift, and go to state 46


state 23

   20 command: SPLITSTATS . ID opt_id NL

    ID  shift, and go to state 47


state 24

   22 command: PENALTYSTATS . ID ID opt_id NL

    ID  shift, and go to state 48


state 25

   23 command: ANLINFO . ID NL

    ID  shift, and go to state 49


state 26

    2 commands: commands command .

    $default  reduce using rule 2 (commands)


state 27

   26 command: error NL .

    $default  reduce using rule 26 (command)


state 28

    3 command: CREATE ID . ID NL
    4        | CREATE ID . ID ID FLOATCONST NL

    ID  shift, and go to state 50


state 29

   10 command: INSERT ID . STRCONST STRCONST NL

    STRCONST  shift, and go to state 51


state 30

    6 command: OPEN ID . NL

    NL  shift, and go to state 52


state 31

    7 command: CLOSE ID . NL

    NL  shift, and go to state 53


state 32

   12 command: QUIT NL .

    $default  reduce using rule 12 (command)


state 33

    9 command: SELECT ID . opt_k opt_ioparam STRCONST NL

    INTCONST  shift, and go to state 54

    $default  reduce using rule 32 (opt_k)

    opt_k  go to state 55


state 34

   11 command: DELETE ID . STRCONST NL

    STRCONST  shift, and go to state 56


state 35

    8 command: CHECK ID . NL

    NL  shift, and go to state 57


state 36

   14 command: SPLIT ID . INTCONST NL

    INTCONST  shift, and go to state 58


state 37

   25 command: HELP NL .

    $default  reduce using rule 25 (command)


state 38

   13 command: DUMP ID . dump_page NL

    INTCONST  shift, and go to state 59

    $default  reduce using rule 28 (dump_page)

    dump_page  go to state 60


state 39

   16 command: SET STRUCT . ID INTCONST NL

    ID  shift, and go to state 61


state 40

   15 command: SET ECHO_TOKEN . INTCONST NL

    INTCONST  shift, and go to state 62


state 41

    5 command: WRITE LOADFILE . ID ID NL

    ID  shift, and go to state 63


state 42

   24 command: PREDINFO ID . INTCONST INTCONST NL

    INTCONST  shift, and go to state 64


state 43

   17 command: CREATEANL ID . ID ID INTCONST FLOATCONST NL

    ID  shift, and go to state 65


state 44

   18 command: OPENANL ID . NL

    NL  shift, and go to state 66


state 45

   19 command: CLOSEANL ID . NL

    NL  shift, and go to state 67


state 46

   21 command: WKLDSTATS ID . NL

    NL  shift, and go to state 68


state 47

   20 command: SPLITSTATS ID . opt_id NL

    ID  shift, and go to state 69

    $default  reduce using rule 30 (opt_id)

    opt_id  go to state 70


state 48

   22 command: PENALTYSTATS ID . ID opt_id NL

    ID  shift, and go to state 71


state 49

   23 command: ANLINFO ID . NL

    NL  shift, and go to state 72


state 50

    3 command: CREATE ID ID . NL
    4        | CREATE ID ID . ID FLOATCONST NL

    ID  shift, and go to state 73
    NL  shift, and go to state 74


state 51

   10 command: INSERT ID STRCONST . STRCONST NL

    STRCONST  shift, and go to state 75


state 52

    6 command: OPEN ID NL .

    $default  reduce using rule 6 (command)


state 53

    7 command: CLOSE ID NL .

    $default  reduce using rule 7 (command)


state 54

   33 opt_k: INTCONST .

    $default  reduce using rule 33 (opt_k)


state 55

    9 command: SELECT ID opt_k . opt_ioparam STRCONST NL

    IOPARAM  shift, and go to state 76

    $default  reduce using rule 34 (opt_ioparam)

    opt_ioparam  go to state 77


state 56

   11 command: DELETE ID STRCONST . NL

    NL  shift, and go to state 78


state 57

    8 command: CHECK ID NL .

    $default  reduce using rule 8 (command)


state 58

   14 command: SPLIT ID INTCONST . NL

    NL  shift, and go to state 79


state 59

   29 dump_page: INTCONST .

    $default  reduce using rule 29 (dump_page)


state 60

   13 command: DUMP ID dump_page . NL

    NL  shift, and go to state 80


state 61

   16 command: SET STRUCT ID . INTCONST NL

    INTCONST  shift, and go to state 81


state 62

   15 command: SET ECHO_TOKEN INTCONST . NL

    NL  shift, and go to state 82


state 63

    5 command: WRITE LOADFILE ID . ID NL

    ID  shift, and go to state 83


state 64

   24 command: PREDINFO ID INTCONST . INTCONST NL

    INTCONST  shift, and go to state 84


state 65

   17 command: CREATEANL ID ID . ID INTCONST FLOATCONST NL

    ID  shift, and go to state 85


state 66

   18 command: OPENANL ID NL .

    $default  reduce using rule 18 (command)


state 67

   19 command: CLOSEANL ID NL .

    $default  reduce using rule 19 (command)


state 68

   21 command: WKLDSTATS ID NL .

    $default  reduce using rule 21 (command)


state 69

   31 opt_id: ID .

    $default  reduce using rule 31 (opt_id)


state 70

   20 command: SPLITSTATS ID opt_id . NL

    NL  shift, and go to state 86


state 71

   22 command: PENALTYSTATS ID ID . opt_id NL

    ID  shift, and go to state 69

    $default  reduce using rule 30 (opt_id)

    opt_id  go to state 87


state 72

   23 command: ANLINFO ID NL .

    $default  reduce using rule 23 (command)


state 73

    4 command: CREATE ID ID ID . FLOATCONST NL

    FLOATCONST  shift, and go to state 88


state 74

    3 command: CREATE ID ID NL .

    $default  reduce using rule 3 (command)


state 75

   10 command: INSERT ID STRCONST STRCONST . NL

    NL  shift, and go to state 89


state 76

   35 opt_ioparam: IOPARAM .

    $default  reduce using rule 35 (opt_ioparam)


state 77

    9 command: SELECT ID opt_k opt_ioparam . STRCONST NL

    STRCONST  shift, and go to state 90


state 78

   11 command: DELETE ID STRCONST NL .

    $default  reduce using rule 11 (command)


state 79

   14 command: SPLIT ID INTCONST NL .

    $default  reduce using rule 14 (command)


state 80

   13 command: DUMP ID dump_page NL .

    $default  reduce using rule 13 (command)


state 81

   16 command: SET STRUCT ID INTCONST . NL

    NL  shift, and go to state 91


state 82

   15 command: SET ECHO_TOKEN INTCONST NL .

    $default  reduce using rule 15 (command)


state 83

    5 command: WRITE LOADFILE ID ID . NL

    NL  shift, and go to state 92


state 84

   24 command: PREDINFO ID INTCONST INTCONST . NL

    NL  shift, and go to state 93


state 85

   17 command: CREATEANL ID ID ID . INTCONST FLOATCONST NL

    INTCONST  shift, and go to state 94


state 86

   20 command: SPLITSTATS ID opt_id NL .

    $default  reduce using rule 20 (command)


state 87

   22 command: PENALTYSTATS ID ID opt_id . NL

    NL  shift, and go to state 95


state 88

    4 command: CREATE ID ID ID FLOATCONST . NL

    NL  shift, and go to state 96


state 89

   10 command: INSERT ID STRCONST STRCONST NL .

    $default  reduce using rule 10 (command)


state 90

    9 command: SELECT ID opt_k opt_ioparam STRCONST . NL

    NL  shift, and go to state 97


state 91

   16 command: SET STRUCT ID INTCONST NL .

    $default  reduce using rule 16 (command)


state 92

    5 command: WRITE LOADFILE ID ID NL .

    $default  reduce using rule 5 (command)


state 93

   24 command: PREDINFO ID INTCONST INTCONST NL .

    $default  reduce using rule 24 (command)


state 94

   17 command: CREATEANL ID ID ID INTCONST . FLOATCONST NL

    FLOATCONST  shift, and go to state 98


state 95

   22 command: PENALTYSTATS ID ID opt_id NL .

    $default  reduce using rule 22 (command)


state 96

    4 command: CREATE ID ID ID FLOATCONST NL .

    $default  reduce using rule 4 (command)


state 97

    9 command: SELECT ID opt_k opt_ioparam STRCONST NL .

    $default  reduce using rule 9 (command)


state 98

   17 command: CREATEANL ID ID ID INTCONST FLOATCONST . NL

    NL  shift, and go to state 99


state 99

   17 command: CREATEANL ID ID ID INTCONST FLOATCONST NL .

    $default  reduce using rule 17 (command)
